--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
   <string name="input_hint" translatable="false" >FB</string>
   <string name="input_prefill" translatable="false" ></string>
   <string name="network_toast" translatable="false" >Uh-oh! This app requires an internet connection</string>
+  <string name="stock_already_saved" translatable="false" >This stock is already saved!</string>
 </resources>
